--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             </tr>
         </table>
         <hr>
+        <h3>Socities joined</h3>
+        <ol>
+            <li>Advertere R&D department</li>
+            <li>Advertere Buisiness Development department</li>
+        </ol>
+        <hr>
         <h3>Skills</h3>
         <table cellspacing="20">
             <tr>
