--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="img.jpg" alt="kshitij's profile picture"></td>
+                <td><img src="img.png" alt="kshitij's profile picture"></td>
                 <td><h1>Kshitij Gupta</h1>
                 <p><em>Student of MSIT <strong><a href="https://www.msit.in/">Maharaja Surajmal Institute of Technology</a></strong></em></p>
                 <p>I am a Web Developer.I love playing and watching sports.</p></td>
